# codespaces-actions-playground

./: demo.ipynb  demo.py  demo.txt  demo1.py  demo2.py  demo3.py  main.py  pyproject.toml  setup.py
.github/workflows/: compositeActionUse.yml  hello-world.yml  linter.yml  matrix.yml  reusableWorkflowsUser.yml  test.yml  test_checkout_actions.yml
