[build-system]
requires = ["setuptools >= 42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pep517]
build = "setuptools.build_meta"

[tool.setuptools.metadata]
name = "your-package-name"
version = "1.0.0"
author = "Your Name"
author-email = "your.email@example.com"
description = "Your package description"
license = "MIT"
url = "https://github.com/yourusername/your-package"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]


[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39']
exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "pyproject.toml"

[tool.pytest]
testpaths = ["tests"]
